--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "bootstrap": "^4.5.3",
         "chart.js": "^2.9.4",
         "vue": "^2.6.12",
+        "vue-axios": "^3.2.0",
         "vue-chartjs": "^3.5.1"
     }
 }
